styling and navigation

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,18 @@
-%h1 Welcome#index
+#bunner
+  .bunner_content
+    %h1 File Cabinet
+    %p Your life's work. Organized, always.
+    %button= link_to "Enter", new_user_registration_path
+
+#callouts
+  .callout_inner
+    .wrapper
+      .callout
+        %h2 Organize
+        %p Enamel pin flannel kitsch selfies tbh tote bag. Ethical yr vexillologist, fanny pack gastropub tote bag VHS. Vegan letterpress lyft paleo, shabby chic fixie drinking vinegar echo park chartreuse kickstarter photo booth vape pok pok offal. Next level kickstarter ugh mixtape, celiac paleo small batch fixie PBR&B tilde blue bottle edison bulb tousled poutine. Shabby chic austin yr gastropub organic quinoa. Schlitz chillwave vexillologist, heirloom artisan bicycle rights health goth selfies copper mug waistcoat. Glossier lomo cred hella, cold-pressed cronut normcore skateboard tumblr drinking vinegar.
+
+#bottom_cta
+  .wrapper
+    %Go Ahead!
+    %br
+    %button= link_to "Join Now", new_user_registration_path
