--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,5 +4,5 @@
 
 @import 'normalize';
 @import 'global.css.scss';
-@import 'docs.scc.scss';
-@import 'welcome.scc.scss';
+@import 'docs.css.scss';
+@import 'welcome.css.scss';
