add style to welcome

--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -1,15 +1,15 @@
 
 // STYLING FOR WELCOME PAGE
 
-#banner {
-  background-image: url(image_path("welcome_banner_image.jpg"));
+#bunner {
+  //background-image: image-url("card-london.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
   width: 100%;
   min-height: 500px;
   display: table;
-  .banner_content {
+  .bunner_content {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
@@ -20,7 +20,7 @@
       margin: 0;
     }
     p {
-      font-size: 1.5rem;
+      font-size: 2.5rem;
       margin: 0 0 2.5rem 0;
       color: rgba(82,158,204, 0.6);
     }
@@ -44,7 +44,7 @@
 }
 
 #callouts {
-  background-image: image-url("callout_background.jpg");
+  background-image: image-url("callout_backgroung.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
