--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -13,6 +13,6 @@
 
 #bottom_cta
   .wrapper
-    %Go Ahead!
+    %h2 Go Ahead!
     %br
     %button= link_to "Join Now", new_user_registration_path
