style docs index

--- a/app/assets/stylesheets/_docs.scss
+++ b/app/assets/stylesheets/_docs.scss
@@ -2,7 +2,7 @@
 
    #docs {
   .doc {
-    background: #78594B;
+    background: #529ECC;
     width: 90%;
     min-height: 100px;
     margin: 1rem 1%;
