add wrapper to new edit login and sign up pages

--- a/app/views/docs/edit.html.haml
+++ b/app/views/docs/edit.html.haml
@@ -1,5 +1,6 @@
-%h2 Edit Doc!
+.wrapper_with_padding
+  %h2 Edit Doc!
 
-= render 'form'
+  = render 'form'
 
-= link_to "Cancel", doc_path
+  = link_to "Cancel", doc_path
